# npmctl

./: .gitignore  README-zh.md  README.md  pyproject.toml
skills/nginx-proxy-manager/: SKILL.md
skills/nginx-proxy-manager/references/: commands.md  workflows.md
src/npmctl/: cli.py  client.py  command_help.py  config.py  context.py  errors.py  models.py  output.py  services.py
src/npmctl/commands/: auth.py  cert.py  config_cmd.py  proxy.py
tests/: test_cli.py  test_config.py  test_models.py  test_services.py
