[project]
name = "npmctl"
version = "0.2.1"
description = "CLI for Nginx Proxy Manager API automation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.28.0",
    "platformdirs>=4.3.0",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.scripts]
npmctl = "npmctl.cli:main"

[project.urls]
Homepage = "https://github.com/NightWatcher314/npmctl"
Repository = "https://github.com/NightWatcher314/npmctl"
Issues = "https://github.com/NightWatcher314/npmctl/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
